# ravro

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  lib.rs.in
src/schema/: builder.rs  de.rs  error.rs  mod.rs  model.rs  ser.rs
tests/: lib.rs  macros.rs  schema_null.rs  schema_object.rs  schema_primitive.rs  schema_union.rs
